# wasm-workspace

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: quickstart.yml
crates/e2e_tests/: Cargo.toml
crates/shared/: Cargo.toml
crates/tx_example/: Cargo.toml  README.md
crates/tx_example/src/: lib.rs  tx.rs
crates/vp_example/: Cargo.toml  README.md
crates/vp_example/src/: lib.rs  vp.rs
