[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "example_test"
path = "src/bin/example_test/main.rs"

[dependencies]
test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "8e15f433bf076a30ef1364aee3fdad5ee449e5d7" }
shared = { path = "../shared" }
namada = { git = "https://github.com/anoma/namada", features = [
    "rand",
], tag = "v0.9.0" }
rand = "0.8"
eyre = "0.6.8"
