[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "example_test"
path = "src/bin/example_test/main.rs"

[dependencies]
test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "3326e216f8e0ed9eb3b60558f8081bfcf94bad7f" }
shared = { path = "../shared" }
namada = { git = "https://github.com/anoma/namada", features = [
    "rand",
], tag = "v0.9.0" }
rand = "0.8"
eyre = "0.6.8"
